# gappman

./: .gitignore  ChangeLog  ChangeResolution.md  DigitalClock.md  GAppMan.md  NetMan.md  ProcessManager.md  ProjectHome.md  README  README-DEVELOPERS  ShutDown.md  configure.ac
applets/: Makefile.am  configure.ac
applets/changeresolution/: .gitignore  Makefile.am  README
applets/digitalclock/: calendar-diagram.dia  parseconf.c  parseconf.h
applets/digitalclock/xml-config-files/: digitalclock.xml
applets/m4/: gmlib_search.m4
applets/netman/: main.c  parseconf.c
applets/netman/xml-config-files/: Makefile.am  netman.xml.in
applets/processmanager/: Makefile.am  README
applets/shutdown/: Makefile.am  README  main.c
applets/shutdown/xml-config-files/: Makefile.am  shutdown.xml.in
branches/0.3/src/: Makefile.am  changeresolution.h  listener.c  parseconf.c  test-listener.c  test.c
branches/0.4/: ChangeLog  Makefile.am  README  README-DEVELOPERS  TODO  configure.ac
branches/0.4/applets/: configure.ac
branches/0.4/applets/changeresolution/: Makefile.am  main.c
branches/0.4/applets/clockdemo/: clock.c  main.c
branches/0.4/applets/m4/: gmlib_search.m4
branches/0.4/applets/netman/: Makefile.am  nm_main.c  nm_parseconf.c  nm_parseconf.h  test_changing_images_and_threading.c
branches/0.4/applets/processmanager/: Makefile.am  connect.h  main.c
branches/0.4/applets/shutdown/: Makefile.am  main.c
branches/0.4/appmanager/: Makefile.am  appmanager.c  listener-dbus.c  listener-socket.h  listener.c
branches/0.4/appmanager/introspection/: Makefile.am
branches/0.4/appmanager/m4/: gmlib_search.m4
branches/0.4/docs/: layoutimplementation.txt
branches/0.4/docs/doxygen/: Doxyfile
branches/0.4/gtk-config/: gtkrc
branches/0.4/libs/: Makefile.am  configure.ac
branches/0.4/libs/connect/: Makefile.am  gm_connect.c  gm_connect.h
branches/0.4/libs/generic/: gm_generic.h
branches/0.4/libs/layout/: gm_changeresolution.c  gm_changeresolution.h  gm_layout.c  gm_layout.h
branches/0.4/libs/parseconf/: Makefile.am  gm_parseconf.c  gm_parseconf.h
branches/0.4/src/: Makefile.am  appmanager.c  listener.c  listener.h
branches/0.4/tests/: rungappman.sh
branches/0.4/xml-config-files/: conf.xml
docs/doxygen/: .gitignore  Doxyfile.in  Makefile.am
libs/: Makefile.am  README-DEVELOPERS  configure.ac
libs/generic/: gm_generic.c  gm_generic.h
libs/keybinder/: Makefile.am  bind.c  gm_keybinder.h
libs/layout/: Makefile.am  gm_layout.c  gm_layout.h
libs/network/: gm_network-socket.c  gm_network.h  libgm_network.pc.in
libs/parseconf/: Makefile.am  README  gm_parseconf.c  gm_parseconf.h
tags/release-0.3/src/: Makefile.am  parseconf.h
tags/release-0.4.2/: Makefile.am  README  README-DEVELOPERS  configure.ac
tags/release-0.4.2/applets/: Makefile.am
tags/release-0.4.2/applets/changeresolution/: main.c
tags/release-0.4.2/applets/clockdemo/: clock-marshallers.c  clock.h  main-ex5.c
tags/release-0.4.2/applets/netman/: nm_main.c  nm_parseconf.c  nm_parseconf.h
tags/release-0.4.2/appmanager/: Makefile.am  appmanager.h  listener-socket.h
tags/release-0.4.2/docs/doxygen/: Makefile.am  (+1 more)
tags/release-0.4.2/gtk-config/: gtkrc
tags/release-0.4.2/libs/: Makefile.am
trunk/: .gitignore  ChangeLog  Makefile.am  README  README-DEVELOPERS  TODO  configure.ac
trunk/applets/: Makefile.am  configure.ac
trunk/applets/changeresolution/: Makefile.am  README  TODO  main.c
trunk/applets/clockdemo/: clock-marshallers.c  clock-marshallers.h  clock-marshallers.list  clock.c  clock.h  main-ex5.c
trunk/applets/digitalclock/: Makefile.am  README  bar-diagram.dia  calendar-diagram.dia  digits-diagram.dia  main.c
trunk/applets/m4/: gmlib_search.m4
trunk/applets/netman/: .gitignore  Makefile.am  main.c  nm_main.c  nm_parseconf.c  nm_parseconf.h  parseconf.c  parseconf.h  test_changing_images_and_threading.c
trunk/applets/processmanager/: .gitignore  Makefile.am  README  connect.c  connect.h  main.c
trunk/applets/shutdown/: .gitignore  Makefile.am  README  main.c
trunk/appmanager/: .gitignore  Makefile.am  appmanager.c  appmanager.h  appmanager_buttonmenu.c  appmanager_buttonmenu.h  appmanager_panel.c  appmanager_panel.h  configure.ac  listener-dbus.c  listener-dbus.h  listener-socket.c  listener-socket.h  listener.c  listener.h
trunk/appmanager/introspection/: Makefile.am  gm_appmanager.xml
trunk/appmanager/m4/: gmlib_search.m4
trunk/debian/: changelog  control  gappman.default  rules
trunk/docs/: gappman-design.dia  panelimplementation.txt  processmanagementimplementation.txt
trunk/docs/doxygen/: Doxyfile  Doxyfile.in  Makefile.am  mainpage
trunk/gtk-config/: gtkrc
trunk/libs/: Makefile.am  README-DEVELOPERS  configure.ac
trunk/libs/connect/: Makefile.am  gm_connect-dbus.c  gm_connect-dbus.h  gm_connect-generic.c  gm_connect-generic.h  gm_connect-socket.c  gm_connect-socket.h  gm_connect.c  gm_connect.h  gm_network-dbus.c  gm_network-dbus.h  gm_network-generic.c  gm_network-generic.h  gm_network-socket.c  gm_network.c  gm_network.h
trunk/libs/generic/: Makefile.am  gm_generic.c  gm_generic.h
trunk/libs/layout/: Makefile.am  changeresolution.c  changeresolution.h  gm_changeresolution.c  gm_changeresolution.h  gm_layout.c  gm_layout.h  layout.c  layout.h  libgm_layout.pc.in
trunk/libs/network/: Makefile.am  gm_network-dbus.c  gm_network-dbus.h  gm_network-socket.c  gm_network-socket.h  gm_network.c
trunk/libs/parseconf/: Makefile.am  README  gm_parseconf.c  gm_parseconf.h  parseconf.c  parseconf.h
trunk/src/: Makefile.am  appmanager.c  appmanager.h  changeresolution.c  listener.c  listener.h  test-listener.c  test.c
trunk/tests/: rungappman.sh
trunk/widgets/: Makefile.am
trunk/widgets/changeresolution/: Makefile.am  main.c
trunk/widgets/netman/: Makefile.am  README  gm_netman.c  gm_netman.h  gm_parseconf.c  gm_parseconf.h  nm_parseconf.c
trunk/widgets/processmanager/: Makefile.am  connect.c  connect.h  main.c
trunk/widgets/shutdown/: Makefile.am  main.c  parseconf.c  parseconf.h
trunk/xml-config-files/: conf.xml  mmclient.xml
(+194 files in other folders)
